--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,52 +1,52 @@
 [
   {
-    "name": "NotyStack Android",
+    "name": "Sistem Informasi Gudang",
     "desc": "Fully fledged android CRUD app based on different design patterns. Built using Java, XML, SQLite, Firebase, RoomDB, MVVM.",
-    "image": "notystackandroid",
-    "category": "android",
+    "image": "gudang",
+    "category": "basicweb",
     "links": {
-      "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/notystack-android"
+      "view": "",
+      "code": ""
     }
   },
   {
-    "name": "SPPU Engg Prep",
+    "name": "Sistem Informasi HRD",
     "desc": "All in one SPPU Engineering resources. Built using Java, XML and Firebase.",
-    "image": "sppuprepandroid",
-    "category": "android",
+    "image": "hrd",
+    "category": "basicweb",
     "links": {
-      "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/sppu-prep-android"
+      "view": "",
+      "code": ""
     }
   },
   {
-    "name": "NewsBox Android",
+    "name": "Sistem Informasi Rekam Medis",
     "desc": "Native android app built using Java, XML. Retrofit & Glide dependencies. Provides different category news.",
-    "image": "newsboxandroid",
-    "category": "android",
+    "image": "medis",
+    "category": "basicweb",
     "links": {
-      "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/newsbox-android"
+      "view": "",
+      "code": ""
     }
   },
   {
-    "name": "Weatherly Android",
+    "name": "Sistem Pendukung keputusan  Metode ARRAS",
     "desc": "Native android app built using Java, XML and Volley dependencies. Provides weather forecast.",
-    "image": "weatherlyandroid",
-    "category": "android",
+    "image": "arras",
+    "category": "basicweb",
     "links": {
-      "view": "https://www.linkedin.com/posts/jigar-sable_androiddev-androidstudio-java-activity-6955224473822199808-JT0j",
-      "code": "https://github.com/jigar-sable/weatherly-android"
+      "view": "",
+      "code": ""
     }
   },
   {
-    "name": "Instagram MERN",
+    "name": "Sistem Pendukung keputusan  Metode SMART",
     "desc": "Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO",
-    "image": "instagrammern",
-    "category": "mern",
+    "image": "smart_umum",
+    "category": "basicweb",
     "links": {
-      "view": "https://instagramernstack.herokuapp.com/",
-      "code": "https://github.com/jigar-sable/instagram-mern"
+      "view": "",
+      "code": ""
     }
   },
   {
