--- a/projects/projects.json
+++ b/projects/projects.json
@@ -72,7 +72,7 @@
   {
     "name": "Sistem Pendukung Keputusan Bantuan Desa Metode SMART",
     "desc": "Full-Stack project dashboard which is collection of projects built on the React library.",
-    "image": "desaku",
+    "image": "desaku22",
     "category": "basicweb",
     "links": {
       "view": "",
