--- a/projects/projects.json
+++ b/projects/projects.json
@@ -70,9 +70,9 @@
     }
   },
   {
-    "name": "Sistem Pendukung Keputusan Bantuan Desa Metode SMART",
+    "name": "Sistem Informasi Pelayanan Kesehatan Terpadu ",
     "desc": "Full-Stack project dashboard which is collection of projects built on the React library.",
-    "image": "desaku22",
+    "image": "pos1",
     "category": "basicweb",
     "links": {
       "view": "",
